# justshell

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  arguments.cpp  arguments.hpp  build.rs  loadingwidget.cpp  loadingwidget.hpp  main.cpp  startupwidget.cpp  startupwidget.hpp
src/: cli.rs  error.rs  gui.rs  main.rs  util.rs
src/gui/: browser_window.rs  url_dialog.rs
src/gui/url_dialog/: imp.rs
ui/: style.css  ui.gresource.xml  url-dialog.ui
