[package]
name = "justshell"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Charles Dong <chardon_cs@proton.me>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
gtk = { package = "gtk4", version = "0.8", features = ["v4_12"] }
url = "2.5"
webkitgtk = { package = "webkit6", version = "0.3", features = ["v2_44"] }

[build-dependencies]
glib-build-tools = "0.19"
