[package]
name = "justshell"
version = "0.3.3"
edition = "2021"
license = "MIT"
authors = ["Charles Dong <chardon_cs@proton.me>"]
description = "Simple webapp wrapper"
repository = "https://github.com/chardoncs/justshell.git"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
url = "2.5"
webkitgtk = { package = "webkit6", version = "0.4", features = ["v2_44"] }

[build-dependencies]
glib-build-tools = "0.19"
